# htmlcsstoconvert

./: LICENSE  README.md  docker-compose.yml
backend/: DockerFile  Dockerfile  main.py  pyproject.toml
backend/migrations/: env.py
backend/models/: user.py
backend/routes/: convert.py  db.py
backend/routes/auth/: logic.py  routes.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/lib/components/: Sidebar.svelte
frontend/src/lib/components/landing/: Header.svelte
frontend/src/lib/config/: navigation.js
frontend/src/routes/(landing)/: +page.svelte
frontend/src/routes/auth/: +layout.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/signup/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte
frontend/src/routes/dashboard/example/: +page.svelte
