[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.4",
    "html2image>=2.0.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.17.2",
    "sqlmodel>=0.0.27",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.0.0",
    "psycopg>=3.1.0",
]
